tests/codegen/fail/020-array-indexoutbound-assign.hyg
let n = 6;
let arr: array {int} = array(n, 40 + 2);
arrayElem(arr, 10) <- 42